--- a/Lemon_minibot_control/CMakeLists.txt
+++ b/Lemon_minibot_control/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(lemon_minibot)
+project(lemon_minibot_control)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
