--- a/Lemon_minibot_detect/package.xml
+++ b/Lemon_minibot_detect/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lemon_minibot</name>
+  <name>lemon_minibot_detect</name>
   <version>0.0.0</version>
-  <description>The lemon_minibot package</description>
+  <description>The lemon_minibot_detect package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
