--- a/lemon_minibot_core/param/location.yaml
+++ b/lemon_minibot_core/param/location.yaml
@@ -1,7 +1,7 @@
-location1: {Confidence: 0, x: 100, y: 0}
-location2: {Confidence: 0, x: 0, y: 0}
-location3: {Confidence: 0, x: 0, y: 0}
-location4: {Confidence: 0, x: 0, y: 0}
-location5: {Confidence: 0, x: 0, y: 0}
+location1: {name: ,Confidence: 0, x: 100, y: 0}
+location2: {name: ,Confidence: 0, x: 0, y: 0}
+location3: {name: ,Confidence: 0, x: 0, y: 0}
+location4: {name: ,Confidence: 0, x: 0, y: 0}
+location5: {name: ,Confidence: 0, x: 0, y: 0}
 
 
