--- a/gazebo/turtlebot3_copy/package.xml
+++ b/gazebo/turtlebot3_copy/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>turtlebot3_description</name>
+  <name>turtlebot3_copy</name>
   <version>1.1.0</version>
   <description>
     3D models of the TurtleBot3 for simulation and visualization
