--- a/lemon_minibot_control/package.xml
+++ b/lemon_minibot_control/package.xml
@@ -60,6 +60,17 @@
   <exec_depend>std_msgs</exec_depend>
 
 
+  <build_depend>actionlib</build_depend>
+  <build_depend>move_base_msgs</build_depend>
+
+  <build_export_depend>actionlib</build_export_depend>
+  <build_export_depend>move_base_msgs</build_export_depend>
+
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>move_base_msgs</exec_depend>
+
+
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
